2000-04-26  Dan Winship  <danw@helixcode.com>

	* mail-format.c (text_to_html): Reorganize a bit and add a new
	flag, TEXT_TO_HTML_CONVERT_URLS to recognize and wrap URLs
	in text.

	* mail-display.c (mail_html_new): Add link_clicked signal handler.
	(on_link_clicked): Use gnome_url_show to launch a browser.

	* mail-format.c: update for CamelStream changes. Update for
	CamelMimeBodyPart -> CamelMimePart

2000-04-25  Dan Winship  <danw@helixcode.com>

	* mail-display.c, mail-format.c: Redo large chunks of this. The
	mail display now consists of a vbox in a scrolled window, in which
	we put multiple GtkHTML objects. This means broken HTML in one
	part can't corrupt other parts. The headers now scroll with the
	body. Unrecognized attachments look prettier, but still don't do
	anything, and will probably be changed later. We can also now
	display nested message/rfc822 parts and multipart/alternatives
	with multipart subparts. Oh, and text/{richtext,enriched}, since
	we had all these ancient sample messages that use it and the lack
	of support annoyed me. :)

	Bonobo embeddables are broken right now, but I don't think that's
	my fault.

	* mail-format.c (reply_body): Fix some bugs that crept into reply
	generation. This needs a lot more work to deal correctly with
	complicated bodies.
	(setup_function_table): pass unknown text subtypes to
	handle_text_plain.
	(handle_multipart_appledouble): new handler. Just ignores the
	first (application/applefile) part and tries to display the
	second part. Since the second part is usually
	application/octet-stream, this doesn't work very well still
	usually.
	(reply_body): Make this deal better with multiparts.

	* mail-format.c, mail-display.c: Now that we're not limited to
	a single GtkHTML for the display, there's no reason to embed
	Bonobo objects for unrecognized content-types in GtkHTML rather
	than embedded them into the vbox directly. So do that.

	Meanwhile, fix up the handler-selection code so that we can